--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-image": "~1.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
